[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/MultiplayerRaceSelect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0flo2kxj716s" path="res://pictures/title_bg_1.png" id="2_6jbdy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jbdy"]
bg_color = Color(0.39853665, 0.60576653, 0.90561056, 0.53333336)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.33566442, 0.19361043, 0.9999874, 1)
shadow_size = 2

[node name="MultiplayerRaceSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6jbdy")
expand_mode = 2

[node name="Card" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -260.0
offset_right = 290.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6jbdy")

[node name="Margin" type="MarginContainer" parent="Card"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Card/Margin"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 35
text = "Select Race"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "One race per player."
horizontal_alignment = 1
autowrap_mode = 3

[node name="ElfButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Elf"

[node name="OrcButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Orc"

[node name="FairyButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Fairy"

[node name="InfernalButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Infernal"

[node name="SelectedHeading" type="Label" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Selected:"
horizontal_alignment = 1

[node name="PlayersList" type="ItemList" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="BackButton" type="Button" parent="Card/Margin/VBoxContainer"]
layout_mode = 2
text = "Leave"

